# quant-market-intelligence-dashboard-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/evaluations/decision/: all_symbols_decision_panel_v1.parquet  all_symbols_decision_reasons_v1.parquet  all_symbols_decision_summary_v1.parquet
configs/: base.yaml  local.yaml  prod.yaml
data/features/gld/: gld_2018-01-01_2026-04-05_features_v1.parquet
data/features/hyg/: hyg_2018-01-01_2026-04-05_features_v1.parquet
data/features/spy/: spy_2018-01-01_2026-04-05_features_v1.parquet
data/features/tlt/: tlt_2018-01-01_2026-04-05_features_v1.parquet
data/normalized/gld/: gld_2018-01-01_2026-04-05_daily_bars.parquet
data/normalized/hyg/: hyg_2018-01-01_2026-04-05_daily_bars.parquet
data/normalized/spy/: spy_2018-01-01_2026-04-05_daily_bars.parquet
data/normalized/tlt/: tlt_2018-01-01_2026-04-05_daily_bars.parquet
data/targets/gld/: gld_2018-01-01_2026-04-05_features_v1_targets_v1.parquet
data/targets/hyg/: hyg_2018-01-01_2026-04-05_features_v1_targets_v1.parquet
data/targets/spy/: spy_2018-01-01_2026-04-05_features_v1_targets_v1.parquet
data/targets/tlt/: tlt_2018-01-01_2026-04-05_features_v1_targets_v1.parquet
src/quant_platform/services/: __init__.py  artifact_loaders.py  dashboard_service.py  market_forecast_service.py  model_comparison_service.py  overview_service.py  settings.py  structural_changes_service.py
streamlit_app/: Home.py  __init__.py  charts.py  ui.py
streamlit_app/pages/: 1_Market_Forecast.py  2_Model_Comparison.py  3_Structural_Changes.py
(+28 files in other folders)
